--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "discord-slashcommand-nodejs",
+  "name": "sensible-bot",
   "version": "1.0.0",
-  "description": "a discord.js slash interaction command bot scaffold",
+  "description": "a bot to help discord moderators make sensible decisions about their community users",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=dev node ./src/index.js"
+    "start": "cross-env NODE_ENV=dev nodemon src/index.js | pino-pretty -i pid,hostname -t yyyy-mm-dd HH:MM:ss"
   },
   "author": "slashroot101",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "axios": "^0.27.2",
     "cross-env": "^7.0.3",
-    "discord-api-types": "^0.27.2",
-    "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "discord.js": "^14.3.0",
+    "dotenv": "^16.0.2",
+    "pino": "^8.5.0",
+    "pino-pretty": "^8.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.9.0"
+    "nodemon": "^2.0.20"
   }
 }
